Fix text overlapping an image on contribution pages.

--- a/css/title.css
+++ b/css/title.css
@@ -28,6 +28,7 @@
 
 #title {
 	border-bottom: none;
+    height: 5em;
 }
 
 /* FIXME: correct main-content class names */
